tests/errors/bad-decimal-digit/main.pa
# A decimal literal with a non-decimal digit.
def main = 12a3
